--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  cloud_firestore: ^4.7.1
+  cloud_firestore: ^4.8.0
   firebase_auth: ^4.6.1
   email_validator: ^2.1.17
   
@@ -58,8 +54,10 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-  - assets\icono1.jpg
+  - assets\icono3.png
   - assets\icono2.png
+  - assets\encendidoo.png
+  - assets\apagadoo.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
